Fix textarea focus styles on dark mode

--- a/style.css
+++ b/style.css
@@ -310,6 +310,8 @@
 
       &:focus {
         background-color: var(--clr-neutral-700);
+        box-shadow: inset 0 0 0 2px var(--clr-purple-500);
+        filter: drop-shadow(0 0 2px var(--clr-purple-400));
       }
     }
   }
